tests/integrations/basic-bin/tests/actual_tests/foomp.stderr
error: extern location for basic_bin is of an unknown type: $DIR/tests/integrations/basic-bin/../../../target/$TMP/$TRIPLE/debug/basic_bin
 --> tests/actual_tests/foomp.rs:3:5
  |
3 | use basic_bin::add;
  |     ^^^^^^^^^

error: file name should be
 --> tests/actual_tests/foomp.rs:3:5
  |
3 | use basic_bin::add;
  |     ^^^^^^^^^

error[E0463]: can't find crate for `basic_bin`
 --> tests/actual_tests/foomp.rs:3:5
  |
3 | use basic_bin::add;
  |     ^^^^^^^^^ can't find crate

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0463`.
